--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 @font-face {
     font-family: mainFont;
     src: url(fonts/Glancyr\ Variable-VF.ttf);
@@ -14,15 +15,24 @@
     background-color:var(--background-color);
     font-family: mainFont;
     color: var(--text-color);
+    display: flex;
 }
 
 .leftContent {   
-    width: 50%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: start;
+    width: 40%;
+    height: 100%;
     padding: 25px;
-    
 }
 .rightContent {
-    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    height: 100%;
 }
 
 .tripSingleItem { 
@@ -48,6 +58,13 @@
     margin-bottom: 20px;
 }
 
+.sectionDescription{
+    font-size: 1rem;
+    font-weight: 200;
+    line-height: 25px;
+    margin-bottom: 20px;
+}
+
 .buttonLight {
     background-color: #f0f0f0; /* Light grey background */
     color: #000; /* Black text */
@@ -69,3 +86,4 @@
     background-color: #e0e0e0; /* Slightly darker grey on hover */
     color: #333; /* Darker text color on hover */
 }
+
