--- a/style.css
+++ b/style.css
@@ -12,10 +12,13 @@
 }
 
 .bodyMain {
-    background-color:var(--background-color);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--background-color);
     font-family: mainFont;
     color: var(--text-color);
-    display: flex;
 }
 
 .leftContent {   
@@ -23,7 +26,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: start;
-    width: 40%;
+    width: 50%;
     height: 100%;
     padding: 25px;
 }
@@ -31,7 +34,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 60%;
+    width: 50%;
     height: 100%;
 }
 
@@ -57,6 +60,7 @@
     font-weight: 700;
     margin-bottom: 20px;
 }
+
 
 .sectionDescription{
     font-size: 1rem;
