--- a/style.css
+++ b/style.css
@@ -30,12 +30,14 @@
     height: 100%;
     padding: 25px;
 }
+
 .rightContent {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 50%;
     height: 100%;
+
 }
 
 .tripSingleItem { 
@@ -53,12 +55,14 @@
     width: 100%;
     height: auto;
     border-radius: var(--border-radius);
+    
 }
 
 .sectionTitle {
     font-size: 2.5rem;
     font-weight: 700;
     margin-bottom: 20px;
+    width: 90%;
 }
 
 
@@ -67,6 +71,7 @@
     font-weight: 200;
     line-height: 25px;
     margin-bottom: 20px;
+    width: 75%;
 }
 
 .buttonLight {
@@ -90,4 +95,111 @@
     background-color: #e0e0e0; /* Slightly darker grey on hover */
     color: #333; /* Darker text color on hover */
 }
+.navCont {
 
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;    
+    align-items: center;        
+    padding-left: 5%;
+    padding-right: 5%;
+    position: sticky;
+    top: 0;
+
+}
+
+.navBar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.1); /* Semi-transparent white */
+    backdrop-filter: blur(10px); /* Blur the background */
+    position:relative;
+    border-radius: var(--border-radius);
+    border: #f0f0f0 solid 0,5px;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+.navList { 
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 50%;
+
+
+}
+.logo{
+    
+    width: 15%;
+    height: auto;
+}
+.navItem {
+    font-size: 1rem;
+    font-weight: 500;
+    margin-left: 20px;
+    margin-right: 20px;
+    cursor: pointer;
+    transition: color 0.3s;
+    color: var(--text-color);
+    text-decoration: none;
+}
+a {
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+.departureDates {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.price {
+
+    color: aquamarine;
+}
+
+footer {
+    background-color: #000;
+    color: #fff;
+    padding: 20px 0;
+    width: 100%;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10%;
+}
+
+.footer-logo img {
+    width: 100px;
+}
+
+.footer-links a {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 10px;
+}
+
+.footer-social a img {
+    width: 20px;
+    margin: 0 10px;
+}
+
+.footericonlinks  {
+    width: 20px;
+    margin-right: 10px;
+}
