--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@
     position:relative;
     border-radius: var(--border-radius);
     border: #f0f0f0 solid 1px;
-    top: 5;
+    top: 10px;
     left: 0;
     z-index: 1;
 }
