--- a/style.css
+++ b/style.css
@@ -90,7 +90,22 @@
     transition: background-color 0.3s, color 0.3s; /* Smooth transition for hover effects */
     box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2); /* Subtle shadow for depth */
 }
-
+.buttonDark {
+    background-color: transparent; /* Light grey background */
+    color: #ffffff; /* Black text */
+    padding: 10px 20px; /* Padding around the text */
+    border: solid 1px #ffffff; 
+    border-radius: 20px; /* Rounded corners */
+    font-size: 16px; /* Font size */
+    font-weight: bold; /* Bold font */
+    text-align: center; /* Centered text */
+    text-decoration: none; /* No underline */
+    display: inline-block; /* Allows setting of margins and alignment */
+    margin: 4px 2px; /* Margins around the button */
+    cursor: pointer; /* Cursor changes to pointer on hover */
+    transition: background-color 0.3s, color 0.3s; /* Smooth transition for hover effects */
+    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2); /* Subtle shadow for depth */
+}
 .buttonLight:hover {
     background-color: #e0e0e0; /* Slightly darker grey on hover */
     color: #333; /* Darker text color on hover */
