--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: start;
-    width: 50%;
+    width: 60%;
     height: 100%;
     padding: 25px;
 }
@@ -35,7 +35,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50%;
+    width: 40%;
     height: 100%;
 
 }
@@ -54,8 +54,9 @@
 .imageitem {
     width: 100%;
     height: auto;
-    border-radius: var(--border-radius);
-    
+    border-radius: 150px;
+    box-shadow: 0px 15px 15px 0px rgba(0,0,0,0.2) ;
+    border: solid 1px #ffffff  ;
 }
 
 .sectionTitle {
