--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 :root {
     --main-font: 'mainFont', sans-serif;
-    --background-color: #2f3136;
+    --background-color: #1e1f20;
     --text-color: aliceblue; 
     --border-radius: 10px;
 }
@@ -32,6 +32,25 @@
 }
 
 .rightContent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    height: 100%;
+
+}
+
+.leftContent1 {   
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: start;
+    width: 60%;
+    height: 100%;
+    padding: 25px;
+}
+
+.rightContent1 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -82,7 +101,7 @@
     border: none; /* No border */
     border-radius: 20px; /* Rounded corners */
     font-size: 16px; /* Font size */
-    font-weight: bold; /* Bold font */
+    font-weight: normal; /* Bold font */
     text-align: center; /* Centered text */
     text-decoration: none; /* No underline */
     display: inline-block; /* Allows setting of margins and alignment */
@@ -98,7 +117,7 @@
     border: solid 1px #ffffff; 
     border-radius: 20px; /* Rounded corners */
     font-size: 16px; /* Font size */
-    font-weight: bold; /* Bold font */
+    font-weight: normal; /* Bold font */
     text-align: center; /* Centered text */
     text-decoration: none; /* No underline */
     display: inline-block; /* Allows setting of margins and alignment */
@@ -218,4 +237,19 @@ footer {
 .footericonlinks  {
     width: 20px;
     margin-right: 10px;
+}
+
+.heroSection {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 80vh;
+    padding-left: 10%;
+    background-image: url('images/heroImage.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+  
 }
