modified:   images/heroImage.png 	modified:   index.html 	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -251,5 +251,7 @@ footer {
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
-  
+}
+.heroText {
+    width: 95%;
 }
