--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@
     width: 100%;
     height: 100vh;
     flex-direction: row;
-    justify-content: space-evenly; /* Spacing items evenly */
+    justify-content: space-evenly; 
     align-items: center;
     padding-left: 10%;
     padding-right: 10%;
@@ -95,40 +95,40 @@
 }
 
 .buttonLight {
-    background-color: #f0f0f0; /* Light grey background */
-    color: #000; /* Black text */
-    padding: 10px 20px; /* Padding around the text */
-    border: none; /* No border */
-    border-radius: 20px; /* Rounded corners */
-    font-size: 16px; /* Font size */
-    font-weight: normal; /* Bold font */
-    text-align: center; /* Centered text */
-    text-decoration: none; /* No underline */
-    display: inline-block; /* Allows setting of margins and alignment */
-    margin: 4px 2px; /* Margins around the button */
-    cursor: pointer; /* Cursor changes to pointer on hover */
-    transition: background-color 0.3s, color 0.3s; /* Smooth transition for hover effects */
-    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2); /* Subtle shadow for depth */
+    background-color: #f0f0f0; 
+    color: #000; 
+    padding: 10px 20px; 
+    border: none; 
+    border-radius: 20px; 
+    font-size: 16px; 
+    font-weight: normal; 
+    text-align: center; 
+    text-decoration: none; 
+    display: inline-block; 
+    margin: 4px 2px; 
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s; 
+    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
 }
 .buttonDark {
-    background-color: transparent; /* Light grey background */
-    color: #ffffff; /* Black text */
-    padding: 10px 20px; /* Padding around the text */
+    background-color: transparent; 
+    color: #ffffff; 
+    padding: 10px 20px; 
     border: solid 1px #ffffff; 
-    border-radius: 20px; /* Rounded corners */
-    font-size: 16px; /* Font size */
-    font-weight: normal; /* Bold font */
-    text-align: center; /* Centered text */
-    text-decoration: none; /* No underline */
-    display: inline-block; /* Allows setting of margins and alignment */
-    margin: 4px 2px; /* Margins around the button */
-    cursor: pointer; /* Cursor changes to pointer on hover */
-    transition: background-color 0.3s, color 0.3s; /* Smooth transition for hover effects */
-    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2); /* Subtle shadow for depth */
+    border-radius: 20px; 
+    font-size: 16px; 
+    font-weight: normal;
+    text-align: center; 
+    text-decoration: none; 
+    display: inline-block; 
+    margin: 4px 2px; 
+    cursor: pointer; 
+    transition: background-color 0.3s, color 0.3s; 
+    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2); 
 }
 .buttonLight:hover {
-    background-color: #e0e0e0; /* Slightly darker grey on hover */
-    color: #333; /* Darker text color on hover */
+    background-color: #e0e0e0; 
+    color: #333; 
 }
 .navCont {
 
@@ -152,8 +152,8 @@
     align-items: center;
     width: 100%;
     padding: 5px;
-    background-color: rgba(255, 255, 255, 0.1); /* Semi-transparent white */
-    backdrop-filter: blur(10px); /* Blur the background */
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px); 
     position:relative;
     border-radius: var(--border-radius);
     border: #f0f0f0 solid 1px;
@@ -220,7 +220,8 @@ footer {
 }
 
 .footer-logo img {
-    width: 100px;
+    width: 80%;
+    height: auto;
 }
 
 .footer-links a {
