--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    align-items: start;
+    align-items: center;
     width: 60%;
     height: 100%;
     padding: 25px;
@@ -62,7 +62,7 @@
 .tripSingleItem { 
     display: flex;
     width: 100%;
-    height: 100vh;
+    height: 65vh;
     flex-direction: row;
     justify-content: space-evenly; 
     align-items: center;
@@ -142,6 +142,7 @@
     padding-right: 10%;
     position: sticky;
     top: 0;
+    z-index: 100;
 
 }
 
@@ -159,7 +160,7 @@
     border: #f0f0f0 solid 1px;
     top: 10px;
     left: 0;
-    z-index: 1;
+    z-index: 10px;
 }
 .navList { 
     display: flex;
@@ -169,7 +170,7 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 50%;
+    width: 60%;
 
 
 }
@@ -247,12 +248,22 @@ footer {
     align-items: center;
     width: 100%;
     height: 80vh;
-    padding-left: 10%;
     background-image: url('images/heroImage.png');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
 }
 .heroText {
-    width: 95%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.027);
+    backdrop-filter: blur(5px); 
+    padding: 25px;
+    border: #f0f0f0 solid 1px;
+  
+    
 }
