--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 
 @font-face {
     font-family: mainFont;
-    src: url(fonts/Glancyr\ Variable-VF.ttf);
+    src: url(/fonts/Glancyr\ Variable-VF.ttf);
 }
 
 :root {
@@ -248,7 +248,7 @@ footer {
     align-items: center;
     width: 100%;
     height: 80vh;
-    background-image: url('images/heroImage.png');
+    background-image: url('/images/heroImage.png');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
