--- a/style.css
+++ b/style.css
@@ -267,3 +267,30 @@ footer {
   
     
 }
+
+.registrationSection {
+    font-family: var(--main-font);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-color: #1e1f20;
+    color: #fff;
+}
+
+.formCont {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+    height: auto;
+    padding: 25px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.027);
+    backdrop-filter: blur(5px); 
+    border: #f0f0f0 solid 1px;
+    
+}
