--- a/assets/style.css
+++ b/assets/style.css
@@ -248,7 +248,7 @@ footer {
     align-items: center;
     width: 100%;
     height: 80vh;
-    background-image: url('images/heroImage.png');
+    background-image: url('/assets/images/heroImage.png');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
