--- a/assets/style.css
+++ b/assets/style.css
@@ -97,15 +97,15 @@
 .buttonLight {
     background-color: #f0f0f0; 
     color: #000; 
-    padding: 10px 20px; 
+    padding: 15px 30px;
     border: none; 
-    border-radius: 20px; 
+    border-radius: 45px; 
     font-size: 16px; 
     font-weight: normal; 
     text-align: center; 
     text-decoration: none; 
     display: inline-block; 
-    margin: 4px 2px; 
+    margin: 4px 10px; 
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s; 
     box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
@@ -113,15 +113,15 @@
 .buttonDark {
     background-color: transparent; 
     color: #ffffff; 
-    padding: 10px 20px; 
+    padding: 15px 30px;
     border: solid 1px #ffffff; 
-    border-radius: 20px; 
+    border-radius: 45px; 
     font-size: 16px; 
     font-weight: normal;
     text-align: center; 
     text-decoration: none; 
     display: inline-block; 
-    margin: 4px 2px; 
+    margin: 4px 10px; 
     cursor: pointer; 
     transition: background-color 0.3s, color 0.3s; 
     box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2); 
@@ -165,12 +165,13 @@
 .navList { 
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     list-style-type: none;
+    column-gap: 15px;
     margin: 0;
     padding: 0;
-    width: 60%;
+    width: 80%;
 
 
 }
@@ -254,7 +255,7 @@ footer {
     background-position: center;
 }
 .heroText {
-    width: 80%;
+    width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
