--- a/assets/style.css
+++ b/assets/style.css
@@ -272,26 +272,105 @@ footer {
 .registrationSection {
     font-family: var(--main-font);
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100vh;
     background-color: #1e1f20;
     color: #fff;
+    margin-top: -100px;
+    
+}
+ 
+.formCont {
+  
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 300px;
+    height: 250px;
+    border-radius: 10px;
+    padding: 25px;
+    background-color: rgba(255, 255, 255, 0.027);
+    backdrop-filter: blur(5px); 
+    border: #f0f0f0 solid 1px;
+ 
+
 }
 
-.formCont {
+.regRight {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 20%;
+    width: 40%;
     height: auto;
     padding: 25px;
+    margin: 20px;
+   
+}
+
+.regLeft {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    height: 100%;
     border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.027);
-    backdrop-filter: blur(5px); 
-    border: #f0f0f0 solid 1px;
-    
+    background-image: url('/assets/images/RegLeft.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    padding-left: 10%;
+}
+
+.regLeft::before {
+    content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  border-radius: 10px; /* Same as the container */
+  background: rgba(0, 0, 0, 0.847); /* Adjust the alpha for darkness */
+  background: linear-gradient(
+    to bottom, 
+    rgba(0, 0, 0, 0.1) 0%, 
+    rgba(0, 0, 0, 0.9) 100%
+  ); /* Gradient from transparent to darker */
+  z-index: 0;
+
+}
+
+.regImage {
+width: 100%;;
+height: auto;   
+}
+
+.inputLabel {
+    margin-bottom: -30px;
+    display: flex;  
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    width: 100%;
+    height: auto;
+    font-size: 1rem;
+    font-weight: 500;
+    color: #fff;
+}
+.regText {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    font-size: 2rem;
+    width: 100%;
+    z-index: 1;
+   
 }
