--- a/assets/style.css
+++ b/assets/style.css
@@ -277,7 +277,7 @@ footer {
     align-items: center;
     width: 100%;
     height: 100vh;
-    background-color: #1e1f20;
+    background-color: #c6c6c6;
     color: #fff;
     margin-top: -100px;
     
@@ -290,10 +290,10 @@ footer {
     justify-content: space-evenly;
     align-items: center;
     width: 300px;
-    height: 250px;
+    height: 350px;
     border-radius: 10px;
     padding: 25px;
-    background-color: rgba(255, 255, 255, 0.027);
+    background-color: rgba(25, 25, 25, 0.971);
     backdrop-filter: blur(5px); 
     border: #f0f0f0 solid 1px;
  
@@ -326,6 +326,7 @@ footer {
     background-position: center;
     position: relative;
     padding-left: 10%;
+    padding-right: 10%;
 }
 
 .regLeft::before {
@@ -339,7 +340,7 @@ footer {
   background: rgba(0, 0, 0, 0.847); /* Adjust the alpha for darkness */
   background: linear-gradient(
     to bottom, 
-    rgba(0, 0, 0, 0.1) 0%, 
+    rgba(0, 0, 0, 0.47) 0%, 
     rgba(0, 0, 0, 0.9) 100%
   ); /* Gradient from transparent to darker */
   z-index: 0;
@@ -352,7 +353,7 @@ height: auto;
 }
 
 .inputLabel {
-    margin-bottom: -30px;
+    
     display: flex;  
     flex-direction: column;
     justify-content: center;
@@ -373,4 +374,19 @@ height: auto;
     width: 100%;
     z-index: 1;
    
+}
+
+.inputBar {
+  
+    background: transparent;
+    border-radius: 45px;
+    color: #fff;
+    padding-left: 18px;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    padding-right: 18px;
+    width: 80%;
+    border: solid 1px #ffffff  ;    
+    
+
 }
