--- a/assets/style.css
+++ b/assets/style.css
@@ -277,7 +277,7 @@ footer {
     align-items: center;
     width: 100%;
     height: 100vh;
-    background-color: #c6c6c6;
+    background-color: #0f3947;
     color: #fff;
     margin-top: -100px;
     
@@ -294,8 +294,9 @@ footer {
     border-radius: 10px;
     padding: 25px;
     background-color: rgba(25, 25, 25, 0.971);
-    backdrop-filter: blur(5px); 
+    backdrop-filter: blur(5px);
     border: #f0f0f0 solid 1px;
+    box-shadow: 0px 24px 28px 0px rgba(0,0,0,0.2); 
  
 
 }
@@ -370,7 +371,7 @@ height: auto;
     flex-direction: column;
     justify-content: center;
     align-items: start;
-    font-size: 2rem;
+    font-size: 3rem;
     width: 100%;
     z-index: 1;
    
