--- a/assets/style.css
+++ b/assets/style.css
@@ -26,16 +26,17 @@
     justify-content: center;
     flex-direction: column;
     align-items: start;
-    width: 60%;
+    width: 40%;
     height: 100%;
     padding: 25px;
 }
 
 .rightContent {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 40%;
+    width: 60%;
     height: 100%;
 
 }
@@ -66,8 +67,7 @@
     flex-direction: row;
     justify-content: space-evenly; 
     align-items: center;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding: 10%;
 }
 
 .imageitem {
@@ -328,6 +328,41 @@ footer {
     position: relative;
     padding-left: 10%;
     padding-right: 10%;
+}
+
+.regLeft1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    height: 100%;
+    border-radius: 10px;
+    background-image: url('/assets/images/LoginLeft.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.regLeft1::before {
+    content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  border-radius: 10px; /* Same as the container */
+  background: rgba(0, 0, 0, 0.847); /* Adjust the alpha for darkness */
+  background: linear-gradient(
+    to bottom, 
+    rgba(0, 0, 0, 0.47) 0%, 
+    rgba(0, 0, 0, 0.9) 100%
+  ); /* Gradient from transparent to darker */
+  z-index: 0;
+
 }
 
 .regLeft::before {
