--- a/assets/style.css
+++ b/assets/style.css
@@ -347,6 +347,7 @@ footer {
     position: relative;
     padding-left: 10%;
     padding-right: 10%;
+    box-shadow: 0px 24px 28px 0px rgb(0, 0, 0);
 }
 
 .regLeft1 {
@@ -364,6 +365,8 @@ footer {
     position: relative;
     padding-left: 10%;
     padding-right: 10%;
+    box-shadow: 0px 24px 28px 0px rgba(0,0,0,0.2); 
+
 }
 
 .regLeft1::before {
@@ -381,6 +384,8 @@ footer {
     rgba(0, 0, 0, 0.9) 100%
   ); /* Gradient from transparent to darker */
   z-index: 0;
+  box-shadow: 0px 24px 28px 0px rgba(0,0,0,0.2); 
+
 
 }
 
@@ -399,6 +404,7 @@ footer {
     rgba(0, 0, 0, 0.9) 100%
   ); /* Gradient from transparent to darker */
   z-index: 0;
+  box-shadow: 0px 24px 28px 0px rgba(0,0,0,0.2); 
 
 }
 
