--- a/assets/style.css
+++ b/assets/style.css
@@ -251,23 +251,25 @@ footer {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 80vh;
+    height: 100vh;
     background-image: url('/assets/images/heroImage.png');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
 }
 .heroText {
-    width: 700px;
+    width: 560px;
+    height: 600px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.027);
+    background-color: rgba(0, 0, 0, 0.435);
     backdrop-filter: blur(5px);
     padding: 25px;
     border: #f0f0f0 solid 1px;
+    margin-top: -100px;
     
 }
 
@@ -449,18 +451,21 @@ height: auto;
     width: 80%;
     border: solid 1px #ffffff  ;    
     
+    
 
 }
 #space-flight-finder {
     display: flex;
-    justify-content: space-between;
+    width: 530px;
+    justify-content: space-around;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
     padding: 20px;
     background: linear-gradient(to right, #000000, #363636, #131313);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     flex-wrap: wrap;
+    
 }
 
 #space-flight-finder input[type="text"], #space-flight-finder input[type="date"] {
@@ -469,6 +474,7 @@ height: auto;
     border-radius: 5px;
     background-color: #1e1e1e;
     color: #fff;
+    width: 238px;
 }
 
 #space-flight-finder input::placeholder {
@@ -487,6 +493,7 @@ height: auto;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+    width: 100%;
 }
 
 #space-flight-finder button:hover {
@@ -513,6 +520,7 @@ select {
     background-color: #1e1e1e;
     color: #fff;
     border: 2px solid #5d5d5d;
+    width: 300px;
 }
 
 /* Enhancing the radio buttons and checkboxes with custom styling */
