--- a/assets/style.css
+++ b/assets/style.css
@@ -49,7 +49,7 @@ input[type="radio"], input[type="checkbox"] {
     justify-content: center;
     flex-direction: column;
     align-items: start;
-    width: 40%;
+    width: 50%;
     height: 100%;
     padding: 25px;
 }
@@ -59,7 +59,7 @@ input[type="radio"], input[type="checkbox"] {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 60%;
+    width: 50%;
     height: 100%;
 
 }
@@ -100,17 +100,25 @@ input[type="radio"], input[type="checkbox"] {
     justify-content: center;
     flex-direction: column;
     align-items: start;
-    width: 100%;
+    width: 10%;
     height: 100%;
     padding: 25px;
     padding-left: 10%;
     padding-right: 10%;
 }
+.heroRightDiv {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    height: 100%;
+}
 
 .imageitem {
     width: 100%;
     height: auto;
-    border-radius: 150px;
+    border-radius: 10px;
     box-shadow: 0px 15px 15px 0px rgba(0,0,0,0.2) ;
     border: solid 1px #ffffff  ;
 }
@@ -128,7 +136,7 @@ input[type="radio"], input[type="checkbox"] {
     font-weight: 200;
     line-height: 25px;
     margin-bottom: 20px;
-    width: 100%;
+    width: 70%;
     text-align: start;
 }
 
@@ -288,6 +296,7 @@ input[type="radio"], input[type="checkbox"] {
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
+ 
 }
 .heroText {
     width: 560px;
