--- a/assets/style.css
+++ b/assets/style.css
@@ -92,7 +92,10 @@ input[type="radio"], input[type="checkbox"] {
     flex-direction: row;
     justify-content: space-evenly; 
     align-items: center;
-    padding: 10%;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 45px;
+    padding-bottom: 45px;
 }
 
 .heroLeftDiv {   
@@ -300,7 +303,7 @@ input[type="radio"], input[type="checkbox"] {
 }
 .heroText {
     width: 560px;
-    height: 600px;
+    height: 515px;
     display: flex;
     flex-direction: column;
     justify-content: center;
