--- a/assets/style.css
+++ b/assets/style.css
@@ -103,17 +103,15 @@ input[type="radio"], input[type="checkbox"] {
     justify-content: center;
     flex-direction: column;
     align-items: start;
-    width: 50%;
+    width: 46%;
     height: 100%;
-    padding: 25px;
- 
 }
 .heroRightDiv {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    width: 54%;
     height: 100%;
 }
 
@@ -316,6 +314,21 @@ input[type="radio"], input[type="checkbox"] {
     margin-top: -100px;
     
 }
+.heroText1 {
+    width: 800px;
+    height: 515px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.435);
+    backdrop-filter: blur(5px);
+    padding: 25px;
+    border: #f0f0f0 solid 1px;
+    margin-top: -100px;
+    
+}
 
 .registrationSection {
     font-family: var(--main-font);
@@ -501,7 +514,7 @@ height: auto;
 #space-flight-finder {
     display: flex;
     width: 530px;
-    justify-content: space-around;
+    justify-content: start;
     align-items: center;
     gap: 5px;
     padding: 20px;
