--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,17 @@ a {
     color: var(--text-color);
 }
 
+p {
+    margin: 0;
+    margin-bottom: 4px;
+    font-size: 16px;
+}
+h3 {
+    margin: 0;
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+
 select {
     padding: 10px;
     border-radius: 5px;
@@ -20,6 +31,12 @@ select {
 /* Enhancing the radio buttons and checkboxes with custom styling */
 input[type="radio"], input[type="checkbox"] {
     accent-color: #4e54c8;
+}
+.pricediv {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
 }
 
 :root {
@@ -114,7 +131,7 @@ input[type="radio"], input[type="checkbox"] {
     height: auto;
     border-radius: 10px;
     box-shadow: 0px 15px 15px 0px rgba(0,0,0,0.2) ;
-    border: solid 1px #ffffff  ;
+    
 }
 
 .sectionTitle {
@@ -287,7 +304,7 @@ input[type="radio"], input[type="checkbox"] {
     gap: 5rem;
     width: 100%;
     height: 100%;
-    padding: 10%;
+    padding: 5%;
 }
 
 .finderSection {
@@ -587,9 +604,9 @@ height: auto;
 
 
 .grid-container {
-    width: 100%;
+    width: 900px;
     display: grid;
-    gap: 5rem;
+    gap: 2rem;
     grid-template-columns: auto auto auto;
     padding: 10px;
   }
@@ -597,16 +614,22 @@ height: auto;
   .grid-item {
     background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid rgba(0, 0, 0, 0.8);
-    padding: 20px;
+    padding: 2px;
     font-size: 20px;
     text-align: start;
     color: #000;
     border-radius: 10px;
-    width: 90%;
+    width: 100%;
   }
 
   .tripContentItem {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    width: 90%;
+    padding-bottom: 5px;
+    padding-left: 10px;
 
-    width: 100%;
 
   }
