--- a/assets/style.css
+++ b/assets/style.css
@@ -307,15 +307,39 @@ input[type="radio"], input[type="checkbox"] {
     padding: 5%;
 }
 
+.finderNavigation {
+    width: 950px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+
+.navItems {
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+align-items: end;
+
+
+}
+
 .finderSection {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 5rem;
+    gap: 1rem;
     width: 100%;
     height: 100%;
     padding-top: 5% ;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-bottom: 3%;
+    background: linear-gradient(to right, #000000, #363636, #131313);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 
@@ -543,15 +567,13 @@ height: auto;
 
 #space-flight-finder {
     position: relative;
-    padding: 25px;
     display: flex;
     grid-column-gap: 0.25rem;
     column-gap: 0.25rem;
     flex-wrap: wrap;
     justify-content: space-between;
-    background: linear-gradient(to right, #000000, #363636, #131313);
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+
     
 }
 
