--- a/assets/style.css
+++ b/assets/style.css
@@ -115,7 +115,7 @@ input[type="radio"], input[type="checkbox"] {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    max-width: 56.5rem;
+    max-width: 100%;
 }
 .heroResultsDiv {
     display: flex;
@@ -272,7 +272,7 @@ input[type="radio"], input[type="checkbox"] {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 10%;
+    padding: 0 17%;
 }
 
 .footer-logo img {
@@ -305,10 +305,12 @@ input[type="radio"], input[type="checkbox"] {
     width: 100%;
     height: 100%;
     padding: 5%;
+    padding-left: 17%;
+    padding-right: 17%;
 }
 
 .finderNavigation {
-    width: 950px;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -335,8 +337,8 @@ align-items: end;
     width: 100%;
     height: 100%;
     padding-top: 5% ;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 17%;
+    padding-right: 17%;
     padding-bottom: 3%;
     background: linear-gradient(to right, #000000, #363636, #131313);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -615,6 +617,7 @@ height: auto;
     gap: 10px;
     color: #fff;
     padding: 5px;
+    width: 100%;
 }
 
 .trip-type label, .accommodations label {
@@ -626,7 +629,7 @@ height: auto;
 
 
 .grid-container {
-    width: 900px;
+    width: 100%;
     display: grid;
     gap: 2rem;
     grid-template-columns: auto auto auto;
