--- a/assets/style.css
+++ b/assets/style.css
@@ -195,8 +195,8 @@ input[type="radio"], input[type="checkbox"] {
     flex-direction: row;
     justify-content: center;    
     align-items: center;        
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 17%;
+    padding-right: 17%;
     position: sticky;
     top: 0;
     z-index: 100;
@@ -303,7 +303,7 @@ input[type="radio"], input[type="checkbox"] {
     align-items: center;
     gap: 5rem;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     padding: 5%;
     padding-left: 17%;
     padding-right: 17%;
