--- a/assets/style.css
+++ b/assets/style.css
@@ -121,7 +121,7 @@ input[type="radio"], input[type="checkbox"] {
     display: grid;
     justify-content: center;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     width: 100%;
     height: 100%;
 }
@@ -597,10 +597,10 @@ height: auto;
 }
 
 #space-flight-finder button {
-    background-color: transparent;
+    background-color: #0B3D91;
     color: white;
     border: 2px solid #ffffff;
-    padding: 20px 10px;
+    padding: 15px 10px;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
