--- a/assets/style.css
+++ b/assets/style.css
@@ -330,18 +330,21 @@ align-items: end;
 
 .finderSection {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-    width: 100%;
-    height: 100%;
-    padding-top: 5% ;
-    padding-left: 17%;
-    padding-right: 17%;
-    padding-bottom: 3%;
-    background: linear-gradient(to right, #000000, #363636, #131313);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+flex-direction: column;
+justify-content: center;
+align-items: center;
+gap: 1rem;
+width: 100%;
+height: 100%;
+padding-top: 5%;
+padding-left: 17%;
+padding-right: 17%;
+padding-bottom: 3%;
+background: url('/assets/images/heroImage.png'), linear-gradient(to right, #000000, #363636, #131313);
+background-size: cover; /* ensures the image covers the entire element */
+background-position: center; /* centers the background image */
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+
 }
 
 
