modified:   assets/style.css 	new file:   dist/fetchTrips.js 	modified:   index.html 	new file:   src/fetchTrips.js 	modified:   webpack.config.js

--- a/assets/style.css
+++ b/assets/style.css
@@ -133,7 +133,7 @@ input[type="radio"], input[type="checkbox"] {
     max-width: 100%;
 }
 .heroResultsDiv {
-    display: none;
+    display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: start;
