--- a/assets/style.css
+++ b/assets/style.css
@@ -719,6 +719,146 @@ height: auto;
     width: 90%;
     padding-bottom: 5px;
     padding-left: 10px;
-
-
   }
+
+.loginSection {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.loginDiv{
+    width: 300px;
+    height: 360px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    background-color: #fffffff5;
+    gap: 1rem;
+    border: 4px solid #0B3D91;
+    padding: 40px;
+}
+.loginInput {
+    width: 80%;
+    height: 40px;
+    border-radius: 5px;
+    border: 2px solid #5d5d5d;
+    background-color: #1e1e1e;
+    color: #fff;
+    padding-left: 10px;
+}
+
+.loginHeader{
+
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #000;
+}
+
+.loginLogo {
+    width: 250px;
+    padding-bottom: 20px;
+    height: auto;
+}
+.navigator {
+ 
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+.dataList {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    width: 96%;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    border-radius: 10px;
+    background-color: #ffffff;
+    box-shadow: 0px 24px 28px 0px rgba(0,0,0,0.2); 
+    margin-bottom: 20px;
+
+}
+
+#sidebar {
+    width: 250px;
+    background-color: #f3f3f3;
+    padding: 20px;
+    overflow-y: auto;
+    color: #000;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    
+}
+
+.listItem {
+
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    transition: background-color 0.3s;
+    cursor: pointer;
+
+
+}
+
+#main-content {
+    flex-grow: 1;
+    padding: 20px;
+    overflow-y: auto;
+    color: #000;
+    background-color: white;
+    border-radius: 10px ;
+}
+table {
+    width: 100%;
+    border-collapse: collapse;
+    border-radius: 10px;
+    
+}
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+    
+}
+th {
+    background-color: #f0f0f0;
+    
+}
+
+td {
+    background-color: #fff;
+}
+
+.dashboardContainer {
+    
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    width: 100%;
+   
+    gap: 1rem;
+
+}
